# ros_vision

./: README.md
aisd_hearing/: package.xml  setup.py
aisd_hearing/aisd_hearing/: my_node.py  recording_publisher.py  speak_client.py  words_publisher.py
aisd_motion/: package.xml  setup.py
aisd_motion/aisd_motion/: move.py  move2.py  my_node.py
aisd_msgs/: CMakeLists.txt  package.xml
aisd_msgs/msg/: Hand.msg
aisd_speaking/: package.xml  setup.py
aisd_speaking/aisd_speaking/: my_node.py  speak.py
aisd_vision/: package.xml  setup.py
aisd_vision/aisd_vision/: hands.py  image_publisher.py  my_node.py
