<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aisd_motion</name>
  <version>0.0.0</version>
  <description>Package for aisd_motion</description>
  <maintainer email="koud0015@algonquinlive.com">Koffi</maintainer>
  <license>No licence</license>
  
  <depend>aisd_msgs</depend>  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
